# cmpt433-as4

./: CMakeLists.txt  load_r5_mcu.sh  r5_mcu_build.sh
linux_app/: CMakeLists.txt  Makefile  sharedDataLayout.h
linux_app/include/: accelerometer.h  joystick_press.h  lcd_display.h
linux_app/lgpio/: CMakeLists.txt  lgGpio.c
linux_app/src/: accelerometer.c  joystick_press.c  lcd_display.c  main.c  periodTimer.c
r5_app/: CMakeLists.txt  prj.conf
r5_app/boards/: beagley_ai_j722s_mcu_r5f0_0.overlay
r5_app/include/: sharedDataLayout.h
r5_app/src/: neopixel_driver.c
